# hanzi_lookup

./: Cargo.toml  README.md  build_wasm.cmd  build_wasm.sh
.github/workflows/: ci.yml
cli_demo/: Cargo.toml
cli_demo/src/: main.rs
hanzi_lookup/: Cargo.toml
hanzi_lookup/src/: analyzed_character.rs  lib.rs  match_collector.rs
mmah_json_convert/: Cargo.toml
mmah_json_convert/src/: main.rs
web_demo/: hanzi_lookup.js  hanzi_lookup_bg.wasm  index.html
