[package]
name = "hanzi_lookup"
version = "1.0.0"
authors = ["gugray <zydeodict@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2.126"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
bincode = "1.3.3"
serde_json = "1.0"
